# OpenCentauri

.github/workflows/: build-rust.yml  decrypt-update.yml  release-tools.yml
decrypt-update/: Cargo.toml
docs/patched-firmware/: index.md  modified_start_end_machine_gcode.md
dsp-to-serial/src/: main.rs  msgbox.rs
